--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@types/pg": "^8.16.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "antd": "^6.1.4",
+    "argon2": "^0.44.0",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
-    "better-auth": "^1.4.11",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
