--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^6.0.0",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.27.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "nodemailer": "^7.0.12",
