--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@radix-ui/react-popover": "^1.1.15",
     "@types/axios": "^0.14.4",
     "@types/pg": "^8.16.0",
     "@types/react-syntax-highlighter": "^15.5.13",
