--- a/package.json
+++ b/package.json
@@ -11,44 +11,45 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "@radix-ui/react-popover": "^1.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@types/axios": "^0.14.4",
     "@types/pg": "^8.16.0",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "antd": "^6.1.4",
+    "antd": "^6.2.2",
     "apexcharts": "^5.3.6",
     "argon2": "^0.44.0",
-    "axios": "^1.13.2",
+    "axios": "^1.13.3",
     "bcrypt": "^6.0.0",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
-    "framer-motion": "^12.27.3",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "nodemailer": "^7.0.12",
-    "pg": "^8.16.3",
+    "pg": "^8.17.2",
     "react": "19.2.3",
     "react-apexcharts": "^1.9.0",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
+    "react-select": "^5.10.2",
     "react-syntax-highlighter": "^16.1.0",
     "remark-gfm": "^4.0.1",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/node": "^20.19.28",
-    "@types/react": "^19.2.8",
+    "@types/node": "^20.19.30",
+    "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9.39.2",
     "eslint-config-next": "16.1.1",
-    "prisma": "^7.2.0",
+    "prisma": "^7.3.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   },
