--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "seed": "bun src/seed.ts",
     "lint": "eslint"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
+    "@stripe/stripe-js": "^8.6.4",
     "@types/axios": "^0.14.4",
     "@types/pg": "^8.16.0",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -27,10 +29,12 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.29.2",
+    "install": "^0.13.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "nodemailer": "^7.0.12",
     "pg": "^8.17.2",
+    "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-apexcharts": "^1.9.0",
     "react-dom": "19.2.3",
@@ -39,6 +43,7 @@
     "react-select": "^5.10.2",
     "react-syntax-highlighter": "^16.1.0",
     "remark-gfm": "^4.0.1",
+    "stripe": "^20.2.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
@@ -51,6 +56,7 @@
     "eslint-config-next": "16.1.1",
     "prisma": "^7.3.0",
     "tailwindcss": "^4.1.18",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "ignoreScripts": [
