--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,9 @@ services:
       - .env
     environment:
       - DATABASE_URL=postgresql://admin:admin@postgres:5432/zuno_db?schema=public
+      - OLLAMA_BASE_URL=http://host.docker.internal:11434
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - postgres
     volumes:
