--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "tunnel": "ngrok http 11434 --host-header=\"rewrite\"",
     "build": "prisma migrate deploy && next build",
     "start": "next start",
     "seed": "bun seed.ts",
@@ -19,8 +20,8 @@
     "@fullcalendar/timegrid": "^6.1.20",
     "@google/generative-ai": "^0.24.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/adapter-pg": "^7.3.0",
-    "@prisma/client": "^7.3.0",
+    "@prisma/adapter-pg": "^7.4.0",
+    "@prisma/client": "^7.4.0",
     "@radix-ui/react-popover": "^1.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
@@ -28,15 +29,15 @@
     "@types/axios": "^0.14.4",
     "@types/pg": "^8.16.0",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "antd": "^6.2.3",
+    "antd": "^6.3.0",
     "apexcharts": "^5.3.6",
     "argon2": "^0.44.0",
-    "axios": "^1.13.4",
+    "axios": "^1.13.5",
     "bcrypt": "^6.0.0",
     "crypto": "^1.0.1",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.3.1",
     "flatpickr": "^4.6.13",
-    "framer-motion": "^12.30.0",
+    "framer-motion": "^12.34.0",
     "install": "^0.13.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
@@ -46,25 +47,25 @@
     "react": "19.2.3",
     "react-apexcharts": "^1.9.0",
     "react-dom": "19.2.3",
-    "react-dropzone": "^14.4.0",
+    "react-dropzone": "^14.4.1",
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-select": "^5.10.2",
     "react-syntax-highlighter": "^16.1.0",
     "remark-gfm": "^4.0.1",
-    "stripe": "^20.3.0",
+    "stripe": "^20.3.1",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/node": "^20.19.30",
+    "@types/node": "^20.19.33",
     "@types/nodemailer": "^7.0.9",
-    "@types/react": "^19.2.10",
+    "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9.39.2",
     "eslint-config-next": "16.1.1",
-    "prisma": "^7.3.0",
+    "prisma": "^7.4.0",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
