--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/bun": "^1.3.9",
     "@types/node": "^20.19.33",
     "@types/nodemailer": "^7.0.9",
     "@types/react": "^19.2.14",
