--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/axios": "^0.14.4",
     "@types/pg": "^8.16.0",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@vercel/analytics": "^1.6.1",
+    "ai": "^6.0.86",
     "antd": "^6.3.0",
     "apexcharts": "^5.3.6",
     "argon2": "^0.44.0",
